# cpp-screen-recorder

./: .gitignore  CMakeLists.txt  CropFrame.cpp  README.md  cApp.cpp  cMain.cpp  screen-recorder-vs.sln  screen-recorder-vs.vcxproj  screen-recorder-vs.vcxproj.filters
headers/: Common.h  CropFrame.h  MainWindow.h  cApp.h  cMain.h
include/: Recorder.cpp  Recorder.h  old_Recorder.h
lib/: Recorder.cpp  old_Recorder.cpp
